# Agile_Data_Code_2

./: .dockerignore  .gitignore  Dockerfile  README.md  Welcome.ipynb  deep_learning.ipynb  docker-compose.yml  download.sh  old.Dockerfile  pyproject.toml  requirements.txt
ch02/: Agile_Tools.ipynb  Introduction_to_PySpark.ipynb
ch02/web/: flask_pymongo.py  test_flask.py  test_flask_bootstrap.py  test_flask_pymongo.py
ch04/: Collecting_and_Displaying_Records.ipynb  download.sh
ch04/web/: config.py  on_time_flask.py  on_time_flask_template.py
ch04/web/templates/: macros.jnj  search.html
ch05/: Visualizing_Data_with_Charts_and_Tables.ipynb
ch05/web/: chart_flask.py
ch06/: Exploring_Data_with_Reports.ipynb
ch06/web/: report_flask.py
ch06/web/templates/: airlines.html  airlines2.html  airport.html  flights_per_airplane.html  search.html
ch07/: Making_Predictions.ipynb  Predicting flight delays with sklearn.ipynb
ch08/: Deploying_Predictive_Systems.ipynb  extract_features.py  make_predictions_streaming.py  train_spark_mllib_model.py
ch08/web/: config.py  predict_flask.py  predict_utils.py
