[tool.poetry]
name = "agile_data_science"
version = "0.1.0"
description = "Code for Agile Data Science 2.0"
authors = ["Russell Jurney <russell.jurney@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
python-dateutil = "^2.8.2"
Jinja2 = "^3.0.2"
requests = "^2.26.0"
Flask = "^2.0.2"
beautifulsoup4 = "^4.10.0"
elasticsearch = "^7.14.2"
frozendict = "^2.0.7"
geopy = "^2.2.0"
ipython = "^7.28.0"
confluent-kafka = "^1.7.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
pymongo = "^3.12.1"
scipy = "^1.7.1"
numpy = "^1.21.3"
selenium = "^4.0.0"
tabulate = "^0.8.9"
tldextract = "^3.1.2"
wikipedia = "^1.4.0"
iso8601 = "^0.1.16"
notebook = "^6.4.5"
WTForms = "^2.3.3"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
